--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -48,7 +48,7 @@ jobs:
         
   # Use Bicep to deploy infrastructure + Publish webapp 
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     needs: buildandtest
     environment:
       name: 'Development'
